# artifact

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
rabbitmq/: rabbitmq.conf
src/apps/: routes.py
src/apps/artifact_auth/: apps.py  scheme.py  serializers.py  urls.py  views.py
src/apps/artifact_auth/services/: auth_backend.py  base_auth.py  telegram.py
src/apps/posts/: admin.py  apps.py  tasks.py  tests.py  urls.py  validators.py  views.py
src/apps/posts/models/: comment.py  like.py  post.py  view.py
src/apps/posts/serializers/: likes.py  posts.py
src/apps/posts/services/: likes.py  posts.py
src/apps/posts/views/: likes.py  posts.py
src/apps/subscription/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/subscription/services/: subs.py
src/apps/users/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py
src/apps/users/endpoint/: auth_views.py  following_views.py  posts_views.py  views.py
src/apps/users/views/: following_views.py  posts_views.py
src/base/: classes.py  exceptions.py  permissions.py  services.py  utils.py  validators.py
src/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/users/: telegram_login.html
